Fix the alignment of ICON_BUTTON accessories to nav-items in Gmailv2

--- a/src/platform-implementation-js/style/gmail.css
+++ b/src/platform-implementation-js/style/gmail.css
@@ -1068,6 +1068,10 @@ body:not(.inboxsdk__gmailv1css) .inboxsdk__navItem_link > a {
   margin-left: 16px;
 }
 
+body:not(.inboxsdk__gmailv1css) .inboxsdk__navItem > .TO .inboxsdk__button {
+  margin-right: 0;
+}
+
 [dir=rtl] .inboxsdk__navItem_link {
   left: -4px;
   right: initial;
